[gd_scene load_steps=9 format=3 uid="uid://celjn3sorthar"]

[ext_resource type="Script" uid="uid://mxnnarfngmlc" path="res://Actors/Pinball/pinball_bumper.gd" id="1_yt5xm"]
[ext_resource type="Texture2D" uid="uid://brxchuuel5at7" path="res://Assets/bumper.png" id="2_gqeg0"]
[ext_resource type="Script" uid="uid://dhi7jl4m0bqmc" path="res://Components/hitbox_component.gd" id="3_gqeg0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qld7y"]
atlas = ExtResource("2_gqeg0")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_up0jx"]
atlas = ExtResource("2_gqeg0")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wy7rl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qld7y")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_up0jx")
}],
"loop": true,
"name": &"extend",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_qld7y"]
radius = 26.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yt5xm"]
radius = 18.0

[node name="PinballBumper" type="StaticBody2D"]
script = ExtResource("1_yt5xm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wy7rl")

[node name="ExtendTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_gqeg0")
knockback = 750
metadata/_custom_type_script = "uid://dhi7jl4m0bqmc"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_qld7y")
debug_color = Color(0.997056, 0, 0.174189, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yt5xm")
debug_color = Color(0.250999, 0.635327, 0, 0.42)
